cmake_minimum_required(VERSION 2.8.12)
project(scheme)
#set(CMAKE_C_COMPILER "clang")
#set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_FLAGS "-Wall -std=c++14 -g -O0 -DDEBUG")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_subdirectory(lib)
add_executable(scheme main.cc include/AST/If.h)
target_link_libraries(scheme interp AST)
